[gd_scene load_steps=10 format=3 uid="uid://c3e8058lwu0a"]

[ext_resource type="Script" uid="uid://ctp2cmjlkd2n6" path="res://cards/card.gd" id="1_q5obu"]
[ext_resource type="Texture2D" uid="uid://fumuhmgt5lgv" path="res://art/VGDevBack2.png" id="2_e484p"]
[ext_resource type="Texture2D" uid="uid://bu1q3i2gm30ce" path="res://cards/Outcasts/card_art/BreakableWall.png" id="3_fpac0"]
[ext_resource type="Script" uid="uid://dq3tnbquciau0" path="res://_scripts/components2D/dnd_component2D.gd" id="4_f61jr"]

[sub_resource type="Animation" id="Animation_ajdvn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card_front:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0.177)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card_back:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.177, 0.177)]
}

[sub_resource type="Animation" id="Animation_hkicm"]
resource_name = "flip_hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card_back:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00152054, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0.177), Vector2(1e-05, 0.177), Vector2(0.177, 0.177)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card_front:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.177, 0.177), Vector2(0, 0.177)]
}

[sub_resource type="Animation" id="Animation_wb4pw"]
resource_name = "flip_reveal"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card_front:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0.177), Vector2(0, 0.177), Vector2(0.177, 0.177)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card_back:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.177352, 0.177352), Vector2(0, 0.177)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_51bko"]
_data = {
&"RESET": SubResource("Animation_ajdvn"),
&"flip_hide": SubResource("Animation_hkicm"),
&"flip_reveal": SubResource("Animation_wb4pw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f61jr"]
size = Vector2(384, 536)

[node name="Card" type="Node2D"]
script = ExtResource("1_q5obu")

[node name="card_back" type="Sprite2D" parent="."]
scale = Vector2(0.177, 0.177)
texture = ExtResource("2_e484p")

[node name="card_front" type="Sprite2D" parent="."]
scale = Vector2(1e-05, 0.177)
texture = ExtResource("3_fpac0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_51bko")
}

[node name="drag_and_drop_component2D" type="Area2D" parent="."]
script = ExtResource("4_f61jr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="drag_and_drop_component2D"]
shape = SubResource("RectangleShape2D_f61jr")

[connection signal="input_event" from="drag_and_drop_component2D" to="drag_and_drop_component2D" method="_on_input_event"]
[connection signal="mouse_entered" from="drag_and_drop_component2D" to="drag_and_drop_component2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="drag_and_drop_component2D" to="drag_and_drop_component2D" method="_on_mouse_exited"]
[connection signal="on_double_click" from="drag_and_drop_component2D" to="." method="_on_drag_and_drop_component_2d_on_double_click"]
